--- a/backend/user-service/package.json
+++ b/backend/user-service/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "cord": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
