--- a/backend/order-management-service/.env
+++ b/backend/order-management-service/.env
@@ -6,3 +6,4 @@ DB_PORT=5432
 PORT=3002
 JWT_SECRET=root
 PRODUCT_CATALOG_SERVICE_URL=http://localhost:3001/products
+USER_SERVICE_URL=http://localhost:3000/users
