--- a/backend/payment-service/package.json
+++ b/backend/payment-service/package.json
@@ -21,6 +21,7 @@
     "dev": "nodemon /src/main.ts"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
@@ -31,6 +32,7 @@
     "express": "^4.18.3",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "qs": "^6.11.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.1",
